# opus-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
opus-sys/: Cargo.toml  LICENSE  build.rs
opus-sys/libopus/: Makefile  config.status  configure  libopus.la  libtool  opus.pc
opus-sys/libopus/doc/: Makefile
opus-sys/src/: lib.rs
src/: lib.rs
tests/: fec.rs  opus-padding.rs  tests.rs
tests/compile-fail/: repacketize.rs
